Fixed Burger menu --Overflow: hidden on body --Js fixed

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ body {
   margin-bottom: 128px;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 /* Fonts config */
 .accent-font {
   font-family: 'Nunito Sans', sans-serif;
@@ -154,8 +158,8 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
+  height: -webkit-fill-available;
   background-color: #fff;
   z-index: 10;
 }
@@ -742,5 +746,7 @@ body {
   color: var(--accentColor-Light);
   text-shadow: 0 0 2px var(--accentColor);
 }
+
+
 
 
